- Adding tour payment rule constraints.

--- a/DomainModel/DomainModel.csproj
+++ b/DomainModel/DomainModel.csproj
@@ -58,13 +58,18 @@
     <Compile Include="ApplicationStatus.cs" />
     <Compile Include="ApplicationUpdater.cs" />
     <Compile Include="Categories.cs" />
-    <Compile Include="Tour\PaymentStrategies\PaymentCriteria.cs" />
+    <Compile Include="Repository\Sql\TourCostRuleConstraintProperties.cs" />
+    <Compile Include="Repository\Sql\TourCostRuleConstraints.cs" />
+    <Compile Include="Tour\Payment\TourDateConstraintMapper.cs" />
+    <Compile Include="Tour\Payment\TourTimeConstraintMapper.cs" />
+    <Compile Include="Types\TourCostConstraintTypes.cs" />
+    <Compile Include="Tour\Payment\PaymentCriteria.cs" />
     <Compile Include="Types\ContactMediaTypes.cs" />
     <Compile Include="Cultures.cs" />
     <Compile Include="Currencies.cs" />
     <Compile Include="Repository\Sql\TourMembersRelation.cs" />
     <Compile Include="Types\TourMembershipTypes.cs" />
-    <Compile Include="Tour\PaymentStrategies\NormalStrategy.cs" />
+    <Compile Include="Tour\Payment\NormalStrategy.cs" />
     <Compile Include="Tour\TourStates.cs" />
     <Compile Include="Tour\Employees.cs" />
     <Compile Include="Membership\Roles.cs" />
