--- a/Resources/Resources.csproj
+++ b/Resources/Resources.csproj
@@ -245,6 +245,12 @@
   <ItemGroup>
     <None Include="Resources\beer_lock.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\flag_green.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\flag_red.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
