--- a/Entities/Entities.csproj
+++ b/Entities/Entities.csproj
@@ -77,6 +77,9 @@
     <Compile Include="EntityBase.cs" />
     <Compile Include="GeneralType.cs" />
     <Compile Include="GeneralTypeCollection.cs" />
+    <Compile Include="JobProgress.cs" />
+    <Compile Include="JobProgressCollection.cs" />
+    <Compile Include="ReportInfo.cs" />
     <Compile Include="TourConstraintDateItem.cs" />
     <Compile Include="Money.cs" />
     <Compile Include="MoneyCurrency.cs" />
