'Add tour group' implemented.

--- a/DomainModel/DomainModel.csproj
+++ b/DomainModel/DomainModel.csproj
@@ -65,7 +65,9 @@
     <Compile Include="Repository\Excell\MonthlyTourBill.cs" />
     <Compile Include="Repository\Sql\TourCostRuleConstraintProperties.cs" />
     <Compile Include="Repository\Sql\TourCostRuleConstraints.cs" />
+    <Compile Include="Repository\Sql\TourGroups.cs" />
     <Compile Include="ServiceBasePrices.cs" />
+    <Compile Include="Tour\TourGroups.cs" />
     <Compile Include="Tour\Payment\RuleValidators\TourDateValidator.cs" />
     <Compile Include="Tour\Payment\RuleValidators\TourTimeValidator.cs" />
     <Compile Include="Tour\TourRuleConstraints.cs" />
